# django-dbcleanup

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  pytest.ini  setup.cfg  tox.ini
.github/workflows/: publish.yml  publish_test.yml  publish_test.yml_disabled  test.yml
.jenkins/: Dockerfile.tests  ci_build  mr_test  run_tests
dbcleanup/: __init__.py  admin.py  apps.py  models.py  utils.py
dbcleanup/management/commands/: dbcleanup.py
testapp/: manage.py  requirements.txt
testapp/testapp/: models.py  settings.py  settings_mysql.py  settings_postgresql.py  urls.py
testapp/testapp/migrations/: 0001_initial.py  0002_auto_20211014_1519.py
testapp/tests/: test_admin.py  test_analyze.py  test_history.py  test_migrations.py  test_tables.py
