[metadata]
name = ppb-django-dbcleanup
version = attr: dbcleanup.__version__
description = Easily monitor database usage - and clean it up (based on your django models)
author = PPB - InfoSec Engineering
author_email = InfoSec.Engineering@ppb.com
url = https://gitlab.app.betfair/security/surface/django-dbcleanup/
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 5 - Development
    Framework :: Django
    License :: Free for any use
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Environment :: Web Environment
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Django >= 3.0
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    tests.*

[coverage:run]
source = dbcleanup

[coverage:report]
show_missing = True
skip_covered = True
